Fixed layout issues. Corrected layout overlay todo component

--- a/src/app/contact-form/contact-form.component.css
+++ b/src/app/contact-form/contact-form.component.css
@@ -20,8 +20,4 @@ button {
         width: 600px;
         margin: 0px auto;
     }
-
-    section {
-        height: 87vh;
-    }
 }
